<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinLockActivity">
    android:layoutDirection="ltr"
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/titlePin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:text="PIN"
            android:textStyle="bold" />

        <LinearLayout android:id="@+id/pin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/first_pin"
                style="@style/pin_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="PIN input field"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/second_pin" />

            <EditText
                android:id="@+id/second_pin"
                style="@style/pin_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="PIN input field"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/third_pin" />

            <EditText
                android:id="@+id/third_pin"
                style="@style/pin_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="PIN input field"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/fourth_pin" />

            <EditText
                android:id="@+id/fourth_pin"
                style="@style/pin_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="PIN input field"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/submitBtn" />
        </LinearLayout>

        <TextView
            android:id="@+id/textPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="60dp"
            android:gravity="center_horizontal"
            android:text='Please enter your PIN code and click "OK"'
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:enabled="false"
                android:text="OK" />

        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>